fix image alignment on plugin cards

--- a/src/components/cardbuilder/card.css
+++ b/src/components/cardbuilder/card.css
@@ -174,6 +174,7 @@ button::-moz-focus-inner {
 
 .cardScalable .cardImageContainer {
     height: 100%;
+    width: 100%;
     contain: strict;
 }
 
